FEAT make the job other need the saludar to run first

--- a/.github/workflows/test_1.yml
+++ b/.github/workflows/test_1.yml
@@ -23,6 +23,8 @@ jobs:
   other:
     # en que corre
     runs-on: ubuntu-latest
+    # indica que depende de otro job tambien lo podes definir como array [saludar,...]
+    needs: saludar
     # pasos del job
     steps:
       # nombre del paso
