FEAT change the name of the workflow to interdependent jobs

--- a/.github/workflows/test_1.yml
+++ b/.github/workflows/test_1.yml
@@ -1,5 +1,5 @@
 # nombre del workflow
-name:  Multiple steps
+name:  Interdependent jobs
 # marque que evento/s dispararan el workflow
 on: [push]
 
