FEAT make the events fire only in main branch

--- a/.github/workflows/test_1.yml
+++ b/.github/workflows/test_1.yml
@@ -1,7 +1,13 @@
 # nombre del workflow
 name:  Interdependent jobs
 # marque que evento/s dispararan el workflow
-on: [push]
+on: 
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   # nombre del job
