--- a/.github/workflows/test_1.yml
+++ b/.github/workflows/test_1.yml
@@ -1,42 +1,21 @@
 # nombre del workflow
-name:  Checkout action test
+name:  Instalacion de paquetes
 # marque que evento/s dispararan el workflow
-on: 
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push]
 
 jobs:
-  # nombre del job
-  saludar:
+  installing-packages:
     # en que corre
     runs-on: ubuntu-latest
-    # pasos del job
-    steps:
-      # nombre del paso
-      - name: saludar
-        # correr comando
-        run: echo "Hola mundo"
-      - name: touch file
-        run: touch hola.txt
-      - name: set text
-        run: echo "Hola mundo" >> hola.txt
-      - name: read file
-        run: cat hola.txt
-  other:
-    # en que corre
-    runs-on: ubuntu-latest
-    # indica que depende de otro job tambien lo podes definir como array [saludar,...]
-    needs: saludar
     # pasos del job
     steps:
       # conecta al github workspace
       - name: Checkout
         uses: actions/checkout@v5.0.0
       # nombre del paso
-      - name: LS
+      - name: runScript
         # correr comando
-        run: ls -al
+        # el | permite correr comandos multilinea
+        run: |
+          chmod +x script.sh
+          ./script.sh
